--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
     "DOMAIN": "example.com",
-    "API_KEY": "pk1_",
-    "API_SECRET": "sk1_"
+    "PORKBUN_API_KEY": "pk1_",
+    "PORKBUN_API_SECRET": "sk1_",
+    "CLOUDFLARE_TOKEN": "",
+    "CLOUDFLARE_ZONE_ID": "",
+    "CLOUDFLARE_ACCOUNT_ID": ""
 }
